ola-parser/src/testdata/syntaxTests/inheritance/fallback_receive/receive_overrides_fallback.sol
contract C {
    fallback() external {}
}

contract D is C {
    receive() external payable override {}
}
// ----
// TypeError 7792: (68-76): fn has override specified but does not override anything.
